cource/network-policy/internal-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              name: mysql
      ports:
        - port: 3306
    - to:
        - podSelector:
            matchLabels:
              name: payroll
      ports:
        - port: 8080
