cource/network-policy/network-policy-definition.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-network-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: demo-pod-label-name
        - ipBlock:
            cidr: 192.168.5.10/32
      ports:
        - port: 3306
          protocol: TCP
